tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/integer/negative-oct.stderr
TOML parse error at line 1, column 18
  |
1 | negative-oct = -0o99
  |                  ^
expected newline, `#`
